parslers-benchmark/src/tests/valid/pairs/createPair.wacc
# create a pair (int, int)

# Output:
# #empty#

# Program:

begin
  pair(int, int) p = newpair(10, 3)
end
