parslers-benchmark/src/tests/invalid/semanticErr/pairsExtended/invalidNewPairAssignment.wacc
# checks for invalid newpair assignment (fst must be an int)

begin
    pair(int, pair(int, int)) a = newpair(null, null)
end